deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 214168/backend:latest
        #resources:
          #limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 3000



---

apiVersion: v1
kind: Service
metadata:
  name: backendclusterip
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
