deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 214168/frontend:latest
        #resources:
          #limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 4200


---

apiVersion: v1
kind: Service
metadata:
  name: frontendclusterip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 4200
    targetPort: 4200
