deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        #resources:
          #limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 443
        #volumeMounts:
          #- name: nginxdata
          #- name: nginxconfig
            #mountPath: /etc/nginx/nginx.conf
      volumes:
    #- name: nginxdata
      #persistentVolumeClaim:
        #claimName: nginxdata   
      - name: nginxconfig
        hostPath:
          path: ./nginx.conf:/etc/nginx/nginx.conf    


---

apiVersion: v1
kind: Service
metadata:
  name: nginxclusterip
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 443
    targetPort: 443
