deployment-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: 214168/proxy:latest
        #resources:
          #limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 5000



---

apiVersion: v1
kind: Service
metadata:
  name: proxyclusterip
spec:
  type: ClusterIP
  selector:
    app: proxy
  ports:
  - port: 5000
    targetPort: 5000
